lab4: process new events

--- a/labs/lab4-athena-query-s3-events/cloudformation/2000-s3-buckets.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/2000-s3-buckets.yaml
@@ -377,13 +377,8 @@ Resources:
           - Effect: Allow
             Action:
             - "dynamodb:PutItem"
-            - "dynamodb:GetItem"
             Resource:
-            - Fn::Sub:
-              - Sub "arn:${AWS::Partition}:dynamodb:*:${AWS::AccountId}:table/${TableName}/index/*"
-              - TableName: 
-                  Fn::ImportValue: !Sub "${DynamoDbStackNameParam}-ObjectTableName"
-            - Fn::Sub: 
+              Fn::Sub: 
               - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}"
               - TableName: 
                   Fn::ImportValue: !Sub "${DynamoDbStackNameParam}-ObjectTableName"
