lab4: transaction processing resources

--- a/labs/lab4-athena-query-s3-events/cloudformation/3000-transaction_processing_resources.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/3000-transaction_processing_resources.yaml
@@ -166,8 +166,7 @@ Resources:
     Properties:
       BatchSize: 10   # FIFO Queue has a max of 10
       Enabled: true
-      EventSourceArn:
-        Fn::ImportValue: !Sub "${AccountTransactionQueue}-EventQueueArn"
+      EventSourceArn: !GetAtt  AccountTransactionQueue.Arn
       FunctionName: !GetAtt TransactionLambdaFunction.Arn
 
 
