lab4: transaction processing resources

--- a/labs/lab4-athena-query-s3-events/cloudformation/2000-s3-buckets.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/2000-s3-buckets.yaml
@@ -468,6 +468,7 @@ Resources:
             - "sqs:DeleteMessage"
             - "sqs:GetQueueAttributes"
             - "sqs:ChangeMessageVisibility"
+            - "sqs:GetQueueUrl"
             Resource: !GetAtt S3NewEventDeleteStoreNotificationQueue.Arn
       - PolicyName: S3NewEventDeleteLambdaFunctionPolicy03
         PolicyDocument:
