--- a/labs/lab4-athena-query-s3-events/cloudformation/3000-transaction_processing_resources.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/3000-transaction_processing_resources.yaml
@@ -107,6 +107,7 @@ Resources:
             - "sqs:GetQueueAttributes"
             - "sqs:ChangeMessageVisibility"
             - "sqs:SendMessage"
+            - "sqs:GetQueueUrl"
             Resource: !GetAtt AccountTransactionCleanupQueue.Arn
       - PolicyName: TransactionLambdaFunctionPolicy04
         PolicyDocument:
