lab4: transaction processing resources

--- a/labs/lab4-athena-query-s3-events/cloudformation/2000-s3-buckets.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/2000-s3-buckets.yaml
@@ -344,6 +344,7 @@ Resources:
             - "sqs:DeleteMessage"
             - "sqs:GetQueueAttributes"
             - "sqs:ChangeMessageVisibility"
+            - "sqs:GetQueueUrl"
             Resource: !GetAtt S3NewEventStoreNotificationQueue.Arn
       - PolicyName: S3NewEventLambdaFunctionPolicy03
         PolicyDocument:
