lab4: transaction processing resources

--- a/labs/lab4-athena-query-s3-events/cloudformation/2000-s3-buckets.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/2000-s3-buckets.yaml
@@ -342,6 +342,7 @@ Resources:
             Action:
             - "sqs:ReceiveMessage"
             - "sqs:DeleteMessage"
+            - "sqs:DeleteMessageBatch"
             - "sqs:GetQueueAttributes"
             - "sqs:ChangeMessageVisibility"
             - "sqs:GetQueueUrl"
