--- a/labs/lab4-athena-query-s3-events/cloudformation/3000-transaction_processing_resources.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/3000-transaction_processing_resources.yaml
@@ -95,6 +95,7 @@ Resources:
             - "sqs:DeleteMessage"
             - "sqs:GetQueueAttributes"
             - "sqs:ChangeMessageVisibility"
+            - "sqs:GetQueueUrl"
             Resource: !GetAtt AccountTransactionQueue.Arn
       - PolicyName: TransactionLambdaFunctionPolicy03
         PolicyDocument:
