--- a/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
@@ -57,10 +57,20 @@ Resources:
         AttributeType: S
       - AttributeName: EventKey
         AttributeType: S
+      - AttributeName: PreviousRequestIdReference
+        AttributeType: S
       GlobalSecondaryIndexes:
       - IndexName: "EventKeyIdx"
         KeySchema: 
         - AttributeName: "EventKey"
+          KeyType: HASH
+        - AttributeName: "SK"
+          KeyType: RANGE
+        Projection: 
+          ProjectionType: "ALL"
+      - IndexName: "PreviousRequestIdReferenceIdx"
+        KeySchema: 
+        - AttributeName: "PreviousRequestIdReference"
           KeyType: HASH
         - AttributeName: "SK"
           KeyType: RANGE
