lab4: transaction processing logic

--- a/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
@@ -78,6 +78,7 @@ Resources:
           KeyType: RANGE
         Projection: 
           ProjectionType: "ALL"
+      LocalSecondaryIndexes:
       - IndexName: "RequestIdIdx"
         KeySchema: 
         - AttributeName: "RequestId"
