--- a/labs/lab4-athena-query-s3-events/cloudformation/3000-transaction_processing_resources.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/3000-transaction_processing_resources.yaml
@@ -131,6 +131,22 @@ Resources:
                 - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}/index/*"
                 - TableName: 
                     Fn::ImportValue: !Sub "${DynamoDbStackNameParam}-AccountTableName"
+      - PolicyName: TransactionLambdaFunctionPolicy05
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: "Allow"
+            Action:
+            - "dynamodb:PutItem"
+            Resource:
+              - Fn::Sub:
+                - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}"
+                - TableName: 
+                    Fn::ImportValue: !Sub "${DynamoDbStackNameParam}-ObjectTableName"
+              - Fn::Sub:
+                - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}/index/*"
+                - TableName: 
+                    Fn::ImportValue: !Sub "${DynamoDbStackNameParam}-ObjectTableName"
       RoleName: TransactionLambdaFunctionRole
 
   TransactionLambdaFunctionLogGroup:
