--- a/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
@@ -39,6 +39,8 @@ Resources:
           ProjectionType: "ALL"
       BillingMode: "PAY_PER_REQUEST"
       TableName: !Ref ObjectTableNameParam
+      PointInTimeRecoverySpecification: 
+          PointInTimeRecoveryEnabled: true
 
   AccountTable:
     Type: AWS::DynamoDB::Table
