--- a/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
+++ b/labs/lab4-athena-query-s3-events/cloudformation/1000-dynamodb.yaml
@@ -40,7 +40,7 @@ Resources:
       BillingMode: "PAY_PER_REQUEST"
       TableName: !Ref ObjectTableNameParam
       PointInTimeRecoverySpecification: 
-          PointInTimeRecoveryEnabled: true
+        PointInTimeRecoveryEnabled: true
 
   AccountTable:
     Type: AWS::DynamoDB::Table
@@ -70,6 +70,8 @@ Resources:
           ProjectionType: "ALL"
       BillingMode: "PAY_PER_REQUEST"
       TableName: !Ref AccountTableNameParam
+      PointInTimeRecoverySpecification: 
+        PointInTimeRecoveryEnabled: true
       
 
 Outputs:
