lab4: redis local experiment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "boto",
         "botocore",
         "ccefab",
+        "chardet",
         "chkconfig",
         "clazz",
         "Cooldown",
