lab4: redesign thinking

--- a/labs/lab4-athena-query-s3-events/step-function-studio/workflow.asl.yaml
+++ b/labs/lab4-athena-query-s3-events/step-function-studio/workflow.asl.yaml
@@ -1,4 +1,4 @@
-Comment: A description of my state machine
+Comment: Transaction Processing State Engine
 StartAt: ReadEventData
 States:
   ReadEventData:
@@ -236,3 +236,4 @@ States:
         MaxAttempts: 6
         BackoffRate: 2
     Next: CommandBuilderInErrorState
+TimeoutSeconds: 60
