lab4: redesign thinking

--- a/labs/lab4-athena-query-s3-events/step-function-studio/workflow.asl.yaml
+++ b/labs/lab4-athena-query-s3-events/step-function-studio/workflow.asl.yaml
@@ -35,6 +35,11 @@ States:
     Next: QueryAccountRequestidError
     Catch:
       - ErrorEquals: []
+    Retry:
+      - ErrorEquals: []
+        BackoffRate: 1
+        IntervalSeconds: 1
+        MaxAttempts: 2
   QueryAccountRequestidError:
     Type: Choice
     Choices:
